fix align in features block

--- a/source/less/components/features.less
+++ b/source/less/components/features.less
@@ -34,13 +34,16 @@
   font-size: 25px;
   font-weight: 700;
   line-height: 30px;
-  align-self: center;
+  align-self: flex-start;
+  width: 84%;
+  margin: 0 auto;
+  margin-top: 40px;
   margin-bottom: 39px;
 
   @media (min-width: @tablet-width) {
     font-size: 43px;
     line-height: 50px;
-    width: 87%;
+    width: 84%;
   }
 
   @media (min-width: @desktop-width) {
@@ -52,13 +55,14 @@
 
 .features__list {
   padding: 0;
-  list-style-type: none;
   margin: 0 auto;
+  list-style-type: none;
+  width: 84%;
 
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 87%;
+    width: 84%;
     grid-gap: 40px 0;
 
     @media (min-width: @desktop-width) {
